--- a/src/components/Magazine.css
+++ b/src/components/Magazine.css
@@ -14,6 +14,7 @@
   width: 100%;
   max-width: var(--magazine-max-width);
   height: calc(100vh - 3rem);
+  height: calc(100dvh - 3rem);
   max-height: 1200px;
   background: var(--dark-surface);
   border-radius: 2px;
@@ -95,6 +96,7 @@
 
   .magazine {
     height: calc(100vh - 1rem);
+    height: calc(100dvh - 1rem);
     border-radius: 0;
   }
 
